solved issue #8, #1, #3. navbar stuff and alignment of text

--- a/css/donate.css
+++ b/css/donate.css
@@ -1,5 +1,17 @@
+/* navbar styles */
+nav {
+  font-family: 'Ruda', sans-serif;
+  background-color: #fff;
+}
+.nav-link {
+  color: #086177;
+}
+.nav-item.active {
+  color: #5FBCD3;
+}
+
 .donate-wrapper {
-  background-image: url('../../assets/pix/home/OurStoryBannerImg.JPG');
+  background-image: url('../../assets/pix/banner_3.JPG');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -36,18 +48,18 @@ label {
 }
 
 /* Header Banner */
-.hero-Img{
-  position: relative;
-  height: 50vh;
-  overflow: hidden;
-  background: url(../../assets/pix/banner_3.JPG) no-repeat center;
-  background-size: cover;
-}
+/* .hero-Img{ */
+/*   position: relative; */
+/*   height: 50vh; */
+/*   overflow: hidden; */
+/*   background: url(../../assets/pix/banner_3.JPG) no-repeat center; */
+/*   background-size: cover; */
+/* } */
 
-.header-container{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  overflow: hidden;
-  color: white;  
-}
+/* .header-container{ */
+/*   position: absolute; */
+/*   top: 50%; */
+/*   left: 50%; */
+/*   overflow: hidden; */
+/*   color: white; */  
+/* } */
